--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -3,9 +3,6 @@
   margin: 0;
   box-sizing: border-box; }
 
-body {
-  overflow-x: hidden; }
-
 img {
   display: block;
   max-width: 100%; }
@@ -31,41 +28,71 @@ html {
 body {
   font-family: "Nexa", sans-serif;
   font-size: 2rem;
-  font-weight: 400; }
+  font-weight: 400;
+  overflow-x: hidden;
+  line-height: 1;
+  color: black; }
 
 .button {
   display: inline-block;
-  color: #6426dd;
   border-radius: 50px;
   background-color: white;
   padding: 23px 42px;
   font-weight: bold;
-  font-size: 16.78px; }
-  .button.header-more {
-    background-color: #00dadc;
-    color: #171718;
-    padding: 26px 70px;
-    display: inline-block; }
-  .button.more {
-    background-color: #ffc727;
-    color: #171718; }
+  font-size: 16.78px;
+  color: #171718;
+  margin-top: 50px;
+  text-transform: uppercase; }
+  .button--cyan {
+    background-color: #00dadc; }
+  .button--white {
+    color: #6426dd;
+    margin-top: unset; }
+  .button--orange {
+    background-color: #ffc727; }
   .button:hover {
     cursor: pointer; }
 
+.heading {
+  font-size: 45px;
+  color: #25234d; }
+  .heading--white {
+    color: white; }
+  .heading--big {
+    font-size: 50px; }
+  .heading span {
+    display: block; }
+
+.text {
+  word-spacing: 7px;
+  font-weight: 400;
+  margin-top: 50px; }
+  .text--white {
+    color: white;
+    margin-top: 30px; }
+  .text--small {
+    font-size: 1.5rem; }
+
+.title {
+  color: #6422db;
+  font-size: 20px;
+  margin-bottom: 40px;
+  letter-spacing: 0.5rem;
+  font-weight: 400; }
+
 .container {
-  max-width: 1450px;
+  max-width: 75%;
   margin: 0 auto; }
 
 .wrapper {
   max-width: 1920px;
   margin: 0 auto; }
   .wrapper .header {
-    background-image: url("../../images/img3.png");
+    background-image: url(".././images/img3.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
-    min-height: 101rem;
-    padding: 0 12.5%; }
+    min-height: 101rem; }
     .wrapper .header-image {
       position: absolute; }
       .wrapper .header-image.top {
@@ -94,21 +121,9 @@ body {
     .wrapper .header-body {
       display: flex;
       align-items: center; }
-      .wrapper .header-body-left {
+      .wrapper .header-body .header-info {
         width: 40%;
         padding-right: 5%; }
-        .wrapper .header-body-left .header-heading {
-          font-size: 55px;
-          color: white; }
-          .wrapper .header-body-left .header-heading span {
-            display: block; }
-        .wrapper .header-body-left .header-desc {
-          width: 90%;
-          color: white;
-          padding-top: 25px;
-          padding-bottom: 50px;
-          word-spacing: 7px;
-          font-weight: 400; }
       .wrapper .header-body-image {
         width: 55%; }
   .wrapper .about {
@@ -126,21 +141,8 @@ body {
         position: absolute;
         right: 0;
         top: 0; }
-      .wrapper .about-content-title {
-        color: #6422db;
-        font-size: 20px;
-        margin-bottom: 40px; }
-      .wrapper .about-content-heading {
-        color: #25234d;
-        font-size: 55px; }
-        .wrapper .about-content-heading span {
-          display: block; }
-      .wrapper .about-content-desc {
-        color: #25234d;
-        margin: 50px 0;
-        line-height: 1.5; }
   .wrapper .services {
-    background-image: url("../../images/img11.png");
+    background-image: url(".././images/img11.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -157,44 +159,25 @@ body {
     .wrapper .services-left {
       width: 38%;
       margin-right: 15%; }
-      .wrapper .services-left-title {
-        color: #6422db;
-        font-size: 20px;
-        margin-bottom: 40px; }
-      .wrapper .services-left-heading {
-        color: #25234d;
-        font-size: 65px;
-        margin-bottom: 50px; }
-        .wrapper .services-left-heading span {
-          display: block; }
-      .wrapper .services-left-desc {
-        color: #25234d;
-        margin-right: 15%;
-        margin-bottom: 45px; }
     .wrapper .services-right {
       width: 45.5%;
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: 45% 45%;
       justify-content: space-between;
-      align-items: center; }
-      .wrapper .services-right-item {
-        width: 45%;
+      align-items: center;
+      grid-gap: 5%; }
+      .wrapper .services-right .services-item {
         background-color: white;
         border-radius: 5px;
         box-shadow: 0px 0px 10px 0px rgba(222, 222, 222, 0.4);
-        padding: 55px 30px; }
-        .wrapper .services-right-item:nth-child(-n + 2) {
-          margin-bottom: 40px; }
-        .wrapper .services-right-item .services-right-title {
-          color: #0e2c47;
+        padding: 30px 20px; }
+        .wrapper .services-right .services-item .services-title {
+          color: #41596e;
           margin: 35px 0; }
-        .wrapper .services-right-item .services-right-content {
-          color: #25234d;
-          line-height: 1.2; }
-        .wrapper .services-right-item .services-right-image {
+        .wrapper .services-right .services-item .services-icon {
           width: 30%; }
   .wrapper .testi {
-    background-image: url("../../images/img15.png");
+    background-image: url(".././images/img15.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -249,9 +232,10 @@ body {
         background-color: white;
         text-align: center;
         padding: 80px 90px 45px;
-        border-radius: 20px;
+        border-radius: 30px;
         z-index: 999;
-        position: relative; }
+        position: relative;
+        box-shadow: 0 25px 0 -10px #895fe9, 0 45px 0 -20px rgba(137, 95, 233, 0.5); }
         .wrapper .testi-content .testi-detail .testi-content-detail {
           margin-bottom: 50px; }
         .wrapper .testi-content .testi-detail .testi-content-heading {
@@ -274,7 +258,7 @@ body {
   .wrapper .form {
     display: flex;
     justify-content: space-between;
-    max-width: 1450px;
+    max-width: 75%;
     margin: 0 auto;
     padding: 95px 0px;
     position: relative; }
@@ -304,7 +288,7 @@ body {
         font-weight: 400; }
     .wrapper .form-right {
       width: 42%;
-      background-image: url("../../images/img19.png");
+      background-image: url(".././images/img19.png");
       background-position: left top;
       background-repeat: no-repeat;
       background-size: cover;
@@ -346,7 +330,7 @@ body {
         .wrapper .form-right button:focus {
           outline: none; }
   .wrapper .footer {
-    background-image: url("../../images/img17.png");
+    background-image: url(".././images/img17.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
