--- a/project/styles/style.scss
+++ b/project/styles/style.scss
@@ -4,9 +4,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-body {
-  overflow-x: hidden;
-}
 img {
   display: block;
   max-width: 100%;
@@ -36,43 +33,81 @@ body {
   font-family: "Nexa", sans-serif;
   font-size: 2rem;
   font-weight: 400;
+  overflow-x: hidden;
+  line-height: 1;
+  color: black;
 }
 .button {
   display: inline-block;
-  color: #6426dd;
   border-radius: 50px;
   background-color: white;
   padding: 23px 42px;
   font-weight: bold;
   font-size: 16.78px;
-  &.header-more {
+  color: #171718;
+  margin-top: 50px;
+  text-transform: uppercase;
+  &--cyan {
     background-color: #00dadc;
-    color: #171718;
-    padding: 26px 70px;
-    display: inline-block;
   }
-  &.more {
+  &--white{
+    color: #6426dd;
+    margin-top: unset;
+  }
+  &--orange{
     background-color: #ffc727;
-    color: #171718;
   }
   &:hover{
     cursor: pointer;
   }
 }
+.heading{
+  font-size: 45px;
+  color: #25234d;
+  &--white{
+    color:white
+  }
+  &--big{
+    font-size: 50px;
+  }
+  span{
+    display: block;
+  }
+}
+.text{
+  // padding-top: 25px;
+  // padding-bottom: 50px;
+  word-spacing: 7px;
+  font-weight: 400;
+  margin-top: 50px;
+  &--white{
+    color: white;
+    margin-top: 30px;
+  }
+  &--small{
+    font-size: 1.5rem;
+  }
+}
+.title {
+  color: #6422db;
+  font-size: 20px;
+  margin-bottom: 40px;
+  letter-spacing: 0.5rem;
+  font-weight: 400;
+}
 .container {
-  max-width: 1450px;
+  max-width: 75%;
   margin: 0 auto;
 }
 .wrapper {
   max-width: 1920px;
   margin: 0 auto;
   .header {
-    background-image: url("../../images/img3.png");
+    background-image: url(".././images/img3.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
     min-height: 101rem;
-    padding: 0 12.5%;
     &-image {
       // width: 100%;
       position: absolute;
@@ -112,26 +147,9 @@ body {
     &-body {
       display: flex;
       align-items: center;
-      &-left {
+      .header-info {
         width: 40%;
         padding-right: 5%;
-        .header {
-          &-heading {
-            font-size: 55px;
-            color: white;
-            span {
-              display: block;
-            }
-          }
-          &-desc {
-            width: 90%;
-            color: white;
-            padding-top: 25px;
-            padding-bottom: 50px;
-            word-spacing: 7px;
-            font-weight: 400;
-          }
-        }
       }
       &-image {
         width: 55%;
@@ -155,29 +173,11 @@ body {
         position: absolute;
         right: 0;
         top: 0;
-        // width: 17%;
-      }
-      &-title {
-        color: #6422db;
-        font-size: 20px;
-        margin-bottom: 40px;
-      }
-      &-heading {
-        color: #25234d;
-        font-size: 55px;
-        span {
-          display: block;
-        }
-      }
-      &-desc {
-        color: #25234d;
-        margin: 50px 0;
-        line-height: 1.5;
       }
     }
   }
   .services {
-    background-image: url("../../images/img11.png");
+    background-image: url(".././images/img11.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -195,66 +195,39 @@ body {
     &-left {
       width: 38%;
       margin-right: 15%;
-      &-title {
-        color: #6422db;
-        font-size: 20px;
-        margin-bottom: 40px;
-      }
-      &-heading {
-        color: #25234d;
-        font-size: 65px;
-        margin-bottom: 50px;
-        span {
-          display: block;
-        }
-      }
-      &-desc {
-        color: #25234d;
-        margin-right: 15%;
-        margin-bottom: 45px;
-      }
     }
     &-right {
       width: 45.5%;
-      display: flex;
-      flex-wrap: wrap;
+      // display: flex;
+      // flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: 45% 45%;
       justify-content: space-between;
       align-items: center;
-      &-item {
-        width: 45%;
+      grid-gap: 5%;
+      .services-item {
+        // width: 45%;
         background-color: white;
         border-radius: 5px;
         box-shadow: 0px 0px 10px 0px rgba(222, 222, 222, 0.4);
-        padding: 55px 30px;
-        &:nth-child(-n + 2) {
-          margin-bottom: 40px;
+        padding: 30px 20px;
+        // &:nth-child(2n) {
+        //   margin-bottom: 40px;
+        // }
+        .services-title {
+          color: #41596e;
+          // margin: 5% 0;
+          margin: 35px 0;
         }
-        &:nth-child(2n) {
-          // margin-bottom: 130px;
-          // position: absolute;
-          // position: relative;
-          // bottom: 30%;
-          // left: 20%;
-        }
-        .services-right {
-          &-title {
-            color: #0e2c47;
-            // margin: 5% 0;
-            margin: 35px 0;
-          }
-          &-content {
-            color: #25234d;
-            line-height: 1.2;
-          }
-          &-image {
-            width: 30%;
-          }
+
+        .services-icon {
+          width: 30%;
         }
       }
     }
   }
   .testi {
-    background-image: url("../../images/img15.png");
+    background-image: url(".././images/img15.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -321,9 +294,10 @@ body {
       padding: 80px 90px 45px;
       // padding-top:80px ;
       // padding-bottom:45px ;s
-      border-radius: 20px;
+      border-radius: 30px;
       z-index: 999;
       position: relative;
+      box-shadow: 0 25px 0 -10px #895fe9, 0 45px 0 -20px rgba(137,95,233,0.5);
         .testi-content{
           &-detail {
             margin-bottom: 50px;
@@ -359,7 +333,7 @@ body {
   .form {
     display: flex;
     justify-content: space-between;
-    max-width: 1450px;
+    max-width: 75%;
     margin: 0 auto;
     padding: 95px 0px;
     position: relative;
@@ -405,7 +379,7 @@ body {
       // border-radius: 20px;
       // box-shadow: 0px 0px 10px 0px rgba(222, 222, 222, 0.4);
       width: 42%;
-      background-image: url('../../images/img19.png');
+      background-image: url('.././images/img19.png');
       background-position: left top;
       background-repeat: no-repeat;
       // background-size: 100%;
@@ -458,7 +432,7 @@ body {
     }
   }
   .footer {
-    background-image: url("../../images/img17.png");
+    background-image: url(".././images/img17.png");
     background-position: left top;
     background-repeat: no-repeat;
     background-size: 100%;
